--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link href="style.css" rel="stylesheet">
 
-    <title>The Saddest Song</title>
+    <title>Sad Panpipes</title>
   </head>
   <body>
     <div class="flex">
@@ -25,10 +25,10 @@
                 </g>
               </g>
             </svg>
-            <h1 class="logo-text">The Saddest Song</h1>
+            <h1 class="logo-text">Sad Panpipes</h1>
           </header>
           <div class="separator">
-            is
+            playing
           </div>
           <div class="song js-song">
             <span class="song__loading">Loading...</span>
