--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1 class="logo-text">Panpipes</h1>
           </header>
           <div class="separator">
-            playing
+            Now playing
           </div>
           <div class="song js-song">
             <span class="song__loading">Loading...</span>
