--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link href="style.css" rel="stylesheet">
 
-    <title>Panpipes</title>
+    <title>Panpip.es</title>
   </head>
   <body>
     <div class="flex">
