--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 
     <link href="style.css" rel="stylesheet">
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107279415-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+      gtag('config', 'UA-107279415-1');
+    </script>
+
     <title>Panpip.es</title>
   </head>
   <body>
