--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         <button class="shuffle-control js-shuffle-control">
           Hit me with another.
         </button>
+        <div class="credit">
+          <a href="http://benhodgson.net">?</a>
+        </div>
       </footer>
     </div>
 
