--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           Hit me with another.
         </button>
         <div class="credit">
-          <a href="http://benhodgson.net">?</a>
+          <a href="http://benhodgson.net" target="_blank">BH</a>
         </div>
       </footer>
     </div>
