Add Facebook OG tags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="All Panpipes. All the time.">
+    <meta name="description" content="Panpipes.">
+    
+    <meta property="og:url" content="http://panpip.es" />
+    <meta property="og:title" content="Panpipes" />
+    <meta property="og:description" content="Panpipes" />
+    <meta property="og:image" content="http://panpip.es/img/og-img.jpg" />
 
     <link href="style.css" rel="stylesheet">
 
